--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                     <li><a class="dropdown-item" href="#" download="">Dropdown link</a></li>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                    <li><a class="dropdown-item" target="_blank" href="./CV.html">see it</a></li>
                   </ul>
                 </div>
               </div>
