--- a/index.html
+++ b/index.html
@@ -38,7 +38,38 @@
 
     </div>
 </div>
-
+</section>
+<!-- end home  -->
+<!-- start services -->
+<section class="services">
+<div class="container">
+  <div class="header">
+    <img src="assets/img/Setting.png" alt="" />
+    <h1>Services</h1>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="./assets/images/cardimg.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="./assets/images/cardimg.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
