--- a/CV.html
+++ b/CV.html
@@ -181,6 +181,30 @@
                         <div style="width: 75%;"></div>
                     </div>
                 </div>
+                <div class="box">
+                    <h4>Figma</h4>
+                    <div class="percent">
+                        <div style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>XD</h4>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Ps</h4>
+                    <div class="percent">
+                        <div style="width: 65%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Ai</h4>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
+                </div>
                 
             </div>
             <div class="about">
