--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Mohammad Arok</title>
   </head>
@@ -20,10 +21,10 @@
       <div class="container">
         <div class="row">
           <div class="col col-lg-6 col-sm-12">
-            <img src="assets/images/Me.png" alt="" />
+            <img src="assets/images/Me.png" alt="" data-aos="zoom-out-down" />
           </div>
           <div class="col col-lg-6 col-sm-12">
-            <h1>Mohammad Arok</h1>
+            <h1 data-aos="zoom-out-up">Mohammad Arok</h1>
             <div class="conten-text-box">
               <h2>I'm a <span class="auto-type"></span></h2>
             </div>
@@ -32,13 +33,14 @@
               role="group"
               aria-label="Button group with nested dropdown"
             >
-              <div class="btn-group" role="group">
+              <div class="btn-group" role="group" >
                 <button
                   id="btnGroupDrop1"
                   type="button"
                   class="btn btn-primary dropdown-toggle"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
+                  data-aos="zoom-out-up"
                 >
                   Dropdown
                 </button>
@@ -75,7 +77,7 @@
                 src="./assets/images/programming.png"
                 class="card-img-top"
                 alt="..." 
-                data-aos="fade-right"
+                data-aos="zoom-in-right"
               />
               <div class="card-body">
                 <h5 class="card-title" data-aos="fade-down">Front End Development</h5>
@@ -92,7 +94,7 @@
                 src="./assets/images/design.png"
                 class="card-img-top"
                 alt="..."
-                data-aos="fade-left"
+                data-aos="zoom-in-left"
               />
               <div class="card-body">
                 <h5 class="card-title" data-aos="fade-down">Design</h5>
@@ -455,7 +457,7 @@
     </div>
     <div class="row">
       <div class="col col-lg-12 col-sm-6">
-        <article class="portfolio-box">  
+        <article class="portfolio-box " data-aos="zoom-in">  
   
           <div class="btn-container">  
            <button class="tab-btn active" data-id="all">all</button>  
@@ -469,38 +471,11 @@
            </div>  
    
            <div class="content" id="web">  
-            <h4>web</h4>  
-            <p>  
-             Man bun PBR&B keytar copper mug prism, hell of helvetica. Synth  
-             crucifix offal deep v hella biodiesel. Church-key listicle  
-             polaroid put a bird on it chillwave palo santo enamel pin,  
-             tattooed meggings franzen la croix cray. Retro yr aesthetic four  
-             loko tbh helvetica air plant, neutra palo santo tofu mumblecore.  
-         Hoodie bushwick pour-over jean shorts chartreuse shabby chic.  
-             Roof party hammock master cleanse pop-up truffaut, bicycle  
-             rights skateboard affogato readymade sustainable deep v  
-             live-edge schlitz narwhal.  
-            </p>  
-            <ul>  
-             <li>list item</li>  
-             <li>list item</li>  
-             <li>list item</li>  
-            </ul>  
+            
            </div>  
   
            <div class="content" id="Graphic">  
-            <h4>Graphic</h4>  
-            <p>  
-             Chambray authentic truffaut, kickstarter brunch taxidermy vape  
-             heirloom four dollar toast raclette shoreditch church-key.  
-             Poutine etsy tote bag, cred fingerstache leggings cornhole  
-             everyday carry blog gastropub. Brunch biodiesel sartorial mlkshk  
-             swag, mixtape hashtag marfa readymade direct trade man braid  
-         cold-pressed roof party. Small batch adaptogen coloring book  
-             heirloom. Letterpress food truck hammock literally hell of wolf  
-             beard adaptogen everyday carry. Dreamcatcher pitchfork yuccie,  
-             banh mi salvia venmo photo booth quinoa chicharrones.  
-            </p>  
+            
            </div>   
           </div>  
          </article>  
