--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Mohammad Arok</title>
   </head>
   <body>
+    <div class="btn-top"><i class='bx bxs-chevrons-up' id="btn-top"></i></div>
     <section class="home" id="home">
       <div class="container">
         <div class="row">
@@ -500,5 +501,6 @@
     <script src="./assets/js/text animation.js"></script>
     <script src="./assets/js/skills.js"></script>
     <script type="module" src="./assets/js/portfolio.js"></script>
+    <script src="assets/js/btn-top.js"></script>
   </body>
 </html>
