--- a/index.html
+++ b/index.html
@@ -484,6 +484,49 @@
     </div>
   </div>
 </section>
+<!-- end  portfolio-->
+<section class="contact">
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-6 col-sm-12">
+      <div class="menu">
+        <div class="toggle"></div>
+        <li style="--i: 0">
+          <a href="#"><img src="assets/images/github-2.png" alt=""></a>
+        </li>
+        <li style="--i: 1">
+          <a href="#"><img src="assets/images/Chat.png" alt=""></a>
+        </li>
+        <li style="--i: 2">
+          <a href="#"><img src="assets/images/Frame 10.png" alt=""></a>
+        </li>
+        <li style="--i: 3">
+          <a href="#"><img src="assets/images/github.png" alt=""></a>
+        </li>
+        <li style="--i: 4">
+          <a href="#"><img src="assets/images/instagram.png" alt=""></a>
+        </li>
+        <li style="--i: 5">
+          <a href="#"><img src="assets/images/linkedin.png" alt=""></a>
+        </li>
+        <li style="--i: 6">
+          <a href="#"><img src="assets/images/messenger.png" alt=""></a>
+        </li>
+        <li style="--i: 7">
+          <a href="#"><img src="assets/images/Twitter.png" alt=""></a>
+        </li>
+      </div>
+    </div>
+    <div class="col col-lg-6 col-sm-12">
+      <img src="assets/images/mohammad-vactore.png" alt="">
+    </div>
+  </div>
+</div>
+</section>
+
+
+
+<!-- start contact -->
 
 
 
