--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           <div class="portfolio-content">  
            <div class="content active" id="all">  
              
-             
+             <a href=""></a>
            </div>  
    
            <div class="content" id="web">  
@@ -485,6 +485,7 @@
   </div>
 </section>
 <!-- end  portfolio-->
+<!-- start contact -->
 <section class="contact">
 <div class="container">
   <div class="row">
@@ -492,28 +493,28 @@
       <div class="menu">
         <div class="toggle"></div>
         <li style="--i: 0">
-          <a href="#"><img src="assets/images/github-2.png" alt=""></a>
+          <a href="#"><img src="assets/images/f.png" alt=""></a>
         </li>
         <li style="--i: 1">
-          <a href="#"><img src="assets/images/Chat.png" alt=""></a>
+          <a href="#"><img src="assets/images/i.png" alt=""></a>
         </li>
         <li style="--i: 2">
-          <a href="#"><img src="assets/images/Frame 10.png" alt=""></a>
+          <a href="#"><img src="assets/images/w.png" alt=""></a>
         </li>
         <li style="--i: 3">
-          <a href="#"><img src="assets/images/github.png" alt=""></a>
+          <a href="#"><img src="assets/images/c.png" alt=""></a>
         </li>
         <li style="--i: 4">
-          <a href="#"><img src="assets/images/instagram.png" alt=""></a>
+          <a href="#"><img src="assets/images/l.png" alt=""></a>
         </li>
         <li style="--i: 5">
-          <a href="#"><img src="assets/images/linkedin.png" alt=""></a>
+          <a href="#"><img src="assets/images/t.png" alt=""></a>
         </li>
         <li style="--i: 6">
-          <a href="#"><img src="assets/images/messenger.png" alt=""></a>
+          <a href="#"><img src="assets/images/" alt=""></a>
         </li>
         <li style="--i: 7">
-          <a href="#"><img src="assets/images/Twitter.png" alt=""></a>
+          <a href="#"><img src="assets/images/" alt=""></a>
         </li>
       </div>
     </div>
@@ -523,10 +524,19 @@
   </div>
 </div>
 </section>
+<!-- end contact -->
+<!-- start footer -->
+<footer>
+  <div class="conten-text-footer">
+    <p>&copy; All reqest hase reseved for </p>
+    <h3>Mohammad Arok</h3>
+  </div>
+</footer>
+<!-- end footer -->
 
 
 
-<!-- start contact -->
+
 
 
 
@@ -545,5 +555,6 @@
     <script src="./assets/js/skills.js"></script>
     <script type="module" src="./assets/js/portfolio.js"></script>
     <script src="assets/js/btn-top.js"></script>
+    <script src="assets/js/contact.js"></script>
   </body>
 </html>
