--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           <a href="#"><img src="assets/images/w.png" alt=""></a>
         </li>
         <li style="--i: 3">
-          <a href="#"><img src="assets/images/c.png" alt=""></a>
+          <a href="#"><img src="assets/images/m.png" alt=""></a>
         </li>
         <li style="--i: 4">
           <a href="#"><img src="assets/images/l.png" alt=""></a>
@@ -511,10 +511,10 @@
           <a href="#"><img src="assets/images/t.png" alt=""></a>
         </li>
         <li style="--i: 6">
-          <a href="#"><img src="assets/images/" alt=""></a>
+          <a href="#"><img src="assets/images/s.png" alt=""></a>
         </li>
         <li style="--i: 7">
-          <a href="#"><img src="assets/images/" alt=""></a>
+          <a href="#"><img src="assets/images/tel.png" alt=""></a>
         </li>
       </div>
     </div>
