--- a/index.html
+++ b/index.html
@@ -518,6 +518,15 @@
   </div>
 </footer>
 <!-- end footer -->
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J581WK46Y6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J581WK46Y6');
+</script>
 
 
 
