--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
   <body>
     <!-- loding -->
     <div class="loading-screen" id="loading-screen">
-      <img src="./assets/images/loading.png" alt="loding" />
-      <div class="spinner-border" role="status">
-        <span class="visually-hidden">Loading...</span>
+      <div class="container">
+        <div class="row">
+          <div class="col col-12">
+            <div class="conten-loder">
+              <img src="./assets/images/logo.png" alt="" />
+            <h1>Mohammad Arok</h1>
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            </div>
+            
+          </div>
+        </div>
       </div>
     </div>
     <!-- end -->
@@ -529,49 +539,49 @@
               </div>
               <ul>
                 <li style="--i: 0">
-                  <a href="#" title="facebook"
+                  <a href="https://www.facebook.com/profile.php?id=100011450744873&mibextid=ZbWKwL" target="_blank"  title="facebook" 
                     ><img src="assets/images/f.png" alt="facebook"
                   /></a>
                 </li>
                 <li style="--i: 1">
-                  <a href="#" title="instagram"
+                  <a href="https://instagram.com/mohammad.arrok?igshid=ZGUzMzM3NWJiOQ" target="_blank"  title="instagram"
                     ><img src="assets/images/i.png" alt="instagram"
                   /></a>
                 </li>
                 <li style="--i: 2">
-                  <a href="#" title="whatsapp"
+                  <a href="https://wa.me/+963938827224" target="_blank"  title="whatsapp"
                     ><img src="assets/images/w.png" alt="whatsapp"
                   /></a>
                 </li>
                 <li style="--i: 3">
-                  <a href="#" title="messenger"
+                  <a href="https://m.me/Mohammad.Ahmad.Arok" target="_blank"  title="messenger"
                     ><img src="assets/images/m.png" alt="messenger"
                   /></a>
                 </li>
                 <li style="--i: 4">
-                  <a href="#" title="linkedin"
+                  <a href="#" target="_blank"  title="linkedin" 
                     ><img src="assets/images/l.png" alt="linkedin"
                   /></a>
                 </li>
                 <li style="--i: 5">
-                  <a href="#" title="twitter"
+                  <a href="https://twitter.com/Mohammad_Arok?t=vj5spsQOqaEbCfuXkh3YtA&s=09" target="_blank"  title="twitter"
                     ><img src="assets/images/t.png" alt="twitter"
                   /></a>
                 </li>
                 <li style="--i: 6">
-                  <a href="#" title="skype"
+                  <a href="https://join.skype.com/invite/Je0WZJCwbFLf" target="_blank"  title="skype"
                     ><img src="assets/images/s.png" alt="skype"
                   /></a>
                 </li>
                 <li style="--i: 7">
-                  <a href="#" title="telegram"
+                  <a href="https://t.me/MohammadArok" target="_blank"  title="telegram"
                     ><img src="assets/images/tel.png" alt="telegram"
                   /></a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="col col-lg-6 col-sm-12">
+          <div class="col col-lg-6 col-sm-12 vector">
             <img
               src="assets/images/mohammad-vactore.png"
               alt="Mohammad vector"
@@ -604,9 +614,10 @@
     <script src="./assets/js/text animation.js"></script>
 
     <!-- JAVASCRIPT FILE -->
+    <script src="assets/js/btn-top.js"></script>
     <script src="./assets/js/skills.js"></script>
     <script type="module" src="./assets/js/portfolio.js"></script>
-    <script src="assets/js/btn-top.js"></script>
+    
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/loader.js"></script>
 
