--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 src="./assets/images/programming.png"
                 class="card-img-top"
                 alt="programming"
-                data-aos="zoom-in-right"
+                data-aos="zoom-in-top"
               />
               <div class="card-body">
                 <h5 class="card-title" data-aos="fade-down">
@@ -152,7 +152,7 @@
                 src="./assets/images/design.png"
                 class="card-img-top"
                 alt="design"
-                data-aos="zoom-in-left"
+                data-aos="zoom-in-top"
               />
               <div class="card-body">
                 <h5 class="card-title" data-aos="fade-down">Design</h5>
