--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===CSS FILE -->
     <link rel="stylesheet" href="./assets/css/control.css" />
     <!-- BOOTSTRAP FILE -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
     <!-- AOS  -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Mohammad Arok</title>
@@ -83,7 +83,7 @@
                   aria-expanded="false"
                   data-aos="zoom-out-up"
                 >
-                  Dropdown
+                  My CV
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                   <li>
@@ -92,7 +92,7 @@
                       class="dropdown-item"
                       href="#"
                       download=""
-                      >Dropdown link</a
+                      >Download</a
                     >
                   </li>
                   <li>
@@ -101,7 +101,7 @@
                       class="dropdown-item"
                       target="_blank"
                       href="./CV.html"
-                      >see it</a
+                      >View</a
                     >
                   </li>
                 </ul>
@@ -130,11 +130,10 @@
               />
               <div class="card-body">
                 <h5 class="card-title" data-aos="fade-down">
-                  Front End Development
+                  Web Development
                 </h5>
                 <p class="card-text" data-aos="fade-up">
-                  The ability to develop the front end of your site in the best
-                  way and as quickly as possible .
+                  Thanks to my web development services, I will design and create modern, attractive, and user-friendly websites that enhance the user experience . As a web programmer, I guarantee that the highest standards of design quality are always met
                 </p>
                 <a
                   href="#portfolio"
@@ -155,10 +154,9 @@
                 data-aos="zoom-in-top"
               />
               <div class="card-body">
-                <h5 class="card-title" data-aos="fade-down">Design</h5>
+                <h5 class="card-title" data-aos="fade-down">UI/UX Design</h5>
                 <p class="card-text" data-aos="fade-up">
-                  Able to design websites and mobile applications in the most
-                  attractive and calm forms .
+                  I can create innovative and attractive designs for user interfaces and user experiences on various websites and applications. I will help you turn your ideas into reality on the internet through unique UI/UX design that aligns with the needs of your project
                 </p>
                 <a
                   href="#portfolio"
@@ -594,7 +592,7 @@
     <!-- start footer -->
     <footer>
       <div class="conten-text-footer">
-        <p>&copy; All reqest hase reseved for</p>
+        <p>&copy; All Rights Reserved For</p>
         <h3>Mohammad Arok</h3>
       </div>
     </footer>
@@ -607,7 +605,7 @@
     </script>
 
     <!-- ===BOTSTRAP FILE=== -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!--  === TYPED ANIMATION === -->
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
