--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===CSS FILE -->
     <link rel="stylesheet" href="./assets/css/control.css" />
     <!-- BOOTSTRAP FILE -->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- AOS  -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Mohammad Arok</title>
@@ -604,8 +604,8 @@
       AOS.init();
     </script>
 
-    <!-- ===BOTSTRAP FILE=== -->
-    <script src="./vendor/bootstrap/js/bootstrap.min.js"></script>
+   <!-- ===BOTSTRAP FILE=== -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <!--  === TYPED ANIMATION === -->
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
