--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
                 <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
                   <li>
                     <a
-                      title="dropdown"
+                      title="CV Download "
                       class="dropdown-item"
                       href="#"
-                      download=""
+                      download="./vendor/Mohammad Arok CV.pdf"
                       >Download</a
                     >
                   </li>
                   <li>
                     <a
-                      title="dropdown"
+                      title="CV View"
                       class="dropdown-item"
                       target="_blank"
                       href="./CV.html"
