--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <a
                       title="CV Download "
                       class="dropdown-item"
-                      href="#"
+                      href="./vendor/Mohammad Arok CV.pdf"
                       download="./vendor/Mohammad Arok CV.pdf"
                       >Download</a
                     >
